force-app/main/default/objects/Credit_Card__c/fields/Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Exp_Date__c</fullName>
    <label>Exp Date</label>
    <type>Date</type>
</CustomField>