force-app/main/default/objects/Credit_Card__c/fields/Name_on_Card__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Card__c</fullName>
    <label>Name on Card</label>
    <length>30</length>
    <type>Text</type>
</CustomField>